Enable all compiler warning messages

--- a/fim/Makefile
+++ b/fim/Makefile
@@ -1,11 +1,11 @@
 main: main.o fim_scheduled.o
-	gcc -o main main.o fim_scheduled.o -lssl -lcrypto
+	gcc -Wall -o main main.o fim_scheduled.o -lssl -lcrypto
 
 main.o: main.c fim_scheduled.h
-	gcc -g -c main.c -lssl -lcrypto
+	gcc -Wall -g -c main.c -lssl -lcrypto
 
 fim_scheduled.o: fim_scheduled.c fim_scheduled.h
-	gcc -g -c fim_scheduled.c -lssl -lcrypto
+	gcc -Wall -g -c fim_scheduled.c -lssl -lcrypto
 
 clean:
 	rm main.o fim_scheduled.o
